version/0.14/_sources/api/ansys/geometry/core/_grpc/_services/v1/designs/GRPCDesignsServiceV1.rst.txt






:class:`GRPCDesignsServiceV1`
=============================


.. py:class:: ansys.geometry.core._grpc._services.v1.designs.GRPCDesignsServiceV1(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.designs.GRPCDesignsService`


   
   Designs service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   designs service. It is specifically designed for the v1 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!





.. py:currentmodule:: GRPCDesignsServiceV1

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~put_active`
            - Activate an already opened design on the service.
          * - :py:attr:`~upload_file`
            - Upload a file to the server.
          * - :py:attr:`~upload_file_stream`
            - Upload a file to the server using streaming.



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~open`
            - Open a design on the service.
          * - :py:attr:`~new`
            - Create a new design.
          * - :py:attr:`~get_assembly`
            - Create a new design.
          * - :py:attr:`~close`
            - Close the currently open design.
          * - :py:attr:`~save_as`
            - Create a new design.
          * - :py:attr:`~download_export`
            - Download and export a design into a certain format.
          * - :py:attr:`~stream_download_export`
            - Download and export a design into a certain format.
          * - :py:attr:`~insert`
            - Insert a part/component/design into an existing design.
          * - :py:attr:`~get_active`
            - Get the active design on the service.
          * - :py:attr:`~stream_design_tessellation`
            - Stream the tessellation of a design.
          * - :py:attr:`~download_file`
            - Download the design from the server.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~file_stub`
            - 
          * - :py:attr:`~designdoc_stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v1.designs import GRPCDesignsServiceV1


Attribute detail
----------------

.. py:attribute:: file_stub

.. py:attribute:: designdoc_stub



Method detail
-------------

.. py:method:: open(**kwargs) -> dict

   
   Open a design on the service.
















   ..
       !! processed by numpydoc !!

.. py:method:: new(**kwargs) -> dict

   
   Create a new design.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_assembly(**kwargs) -> dict

   
   Create a new design.
















   ..
       !! processed by numpydoc !!

.. py:method:: close(**kwargs) -> dict

   
   Close the currently open design.
















   ..
       !! processed by numpydoc !!

.. py:method:: put_active(**kwargs) -> dict
   :abstractmethod:


   
   Activate an already opened design on the service.
















   ..
       !! processed by numpydoc !!

.. py:method:: save_as(**kwargs) -> dict

   
   Create a new design.
















   ..
       !! processed by numpydoc !!

.. py:method:: download_export(**kwargs) -> dict

   
   Download and export a design into a certain format.
















   ..
       !! processed by numpydoc !!

.. py:method:: stream_download_export(**kwargs) -> dict

   
   Download and export a design into a certain format.
















   ..
       !! processed by numpydoc !!

.. py:method:: insert(**kwargs) -> dict

   
   Insert a part/component/design into an existing design.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_active(**kwargs) -> dict

   
   Get the active design on the service.
















   ..
       !! processed by numpydoc !!

.. py:method:: upload_file(**kwargs) -> dict
   :abstractmethod:


   
   Upload a file to the server.
















   ..
       !! processed by numpydoc !!

.. py:method:: upload_file_stream(**kwargs) -> dict
   :abstractmethod:


   
   Upload a file to the server using streaming.
















   ..
       !! processed by numpydoc !!

.. py:method:: stream_design_tessellation(**kwargs) -> dict

   
   Stream the tessellation of a design.
















   ..
       !! processed by numpydoc !!

.. py:method:: download_file(**kwargs) -> dict

   
   Download the design from the server.
















   ..
       !! processed by numpydoc !!




